# FT-1210

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/: audio.h  deck.h  ui.h
src/: audio.c  deck.c  ft1210.desktop  main.c  ui.c
